# PEC4

./: README.md
PEC4/: Makefile  README.md  config.py  requirements.txt
PEC4/docs/: mkdocs.yml
PEC4/docs/docs/: index.md
PEC4/src/: main.py
PEC4/src/exercises/: __init__.py  ejercicio_1.py  ejercicio_2.py  ejercicio_3.py  ejercicio_4.py  ejercicio_5.py  ejercicio_6.py  ejercicio_7.py
PEC4_modules/: LICENSE  pyproject.toml  requirements.txt
PEC4_modules/docs/docs/: ejercicio_1.html  ejercicio_5.html  ejercicio_6.html  ejercicio_7.html
PEC4_modules/src/: main.py
PEC4_modules/src/data/: LaLiga_Matches.csv
PEC4_modules/src/exercises/: ejercicio_1.py  ejercicio_2.py  ejercicio_3.py  ejercicio_4.py  ejercicio_7.py
PEC4_modules/tests/: tests_ex6.py
